<resources>
    <string name="app_name">AndroidCollect</string>
    <string name="action_settings">Settings</string>
    <string name="app_title_name">首页</string>
    <string name="drawer_title_okhttp">OkHttp使用</string>
    <string name="drawer_title_memo">备忘录</string>
    <string name="drawer_title_messenger">Messenger</string>
    <string name="drawer_title_frozenui">frozenui demo</string>
    <string name="drawer_title_dagger">dagger2</string>
    <string name="drawer_title_record">录制桌面</string>


    <string name="drawer_title_mvp">RxJava和MVP</string>
    <string name="drawer_title_circle">画圆</string>

    <string name="action_share">分享</string>
    <string name="action_search">搜索</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>


    <string name="add_task">New TO-DO</string>
    <string name="edit_task">Edit TO-DO</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">TO-DOs</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your TO-DO here.</string>
    <string name="empty_task_message">TO DOs cannot be empty</string>
    <string name="successfully_saved_task_message">TO-DO saved</string>
    <string name="list_title">TO-DO List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks:</string>
    <string name="statistics_completed_tasks">Completed tasks:</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All TO-DOs</string>
    <string name="label_active">Active TO-DOs</string>
    <string name="label_completed">Completed TO-DOs</string>
    <string name="no_tasks_all">You have no TO-DOs!</string>
    <string name="no_tasks_active">You have no active TO-DOs!</string>
    <string name="no_tasks_completed">You have no completed TO-DOs!</string>
    <string name="no_tasks_add">Add a TO-DO item +</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_aidl">AIDLActivity</string>
    <string name="title_activity_circle">圆</string>
    <string name="title_activity_radia">进度条</string>
    <string name="title_activity_mvp">MvpActivity</string>
    <string name="title_activity_ticker">TickerActivity</string>
</resources>
