<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_home"
            android:icon="@mipmap/ic_launcher"
            android:title="首页" />
        <item
            android:id="@+id/navigation_item_blog"
            android:icon="@mipmap/ic_launcher"
            android:title="我的简书" />
        <item
            android:id="@+id/navigation_item_csdn"
            android:icon="@mipmap/ic_launcher"
            android:title="我的CSDN" />
        <item
            android:id="@+id/navigation_item_okhttp"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_title_okhttp" />

        <item
            android:id="@+id/navigation_item_mvp"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_title_mvp" />

        <item
            android:id="@+id/navigation_item_memo"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_title_memo" />

        <item
            android:id="@+id/navigation_item_messenger"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_title_messenger" />

        <item
            android:id="@+id/navigation_item_frozenui"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_title_frozenui" />
        <item
            android:id="@+id/navigation_item_dagger"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_title_dagger" />

        <item
            android:id="@+id/navigation_item_record"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_title_record" />
    </group>

</menu>